# julia-the-viper

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .hypatia-ignore  .tool-versions  0-AI-MANIFEST.a2ml  ALIGNMENT-AFFINESCRIPT.adoc  ANCHOR.scope-arrest.2026-01-01.Jewell.scm  AUTHORITY_STACK.mustfile-nickel.scm  CHANGELOG.adoc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  ECOSYSTEM.scm  EXPLAINME.adoc  FUNDING.yml  GOVERNANCE.adoc  Justfile  LICENSE-MIT  LICENSING.md  MAINTAINERS.md  META.scm  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.md  README.adoc  README.md  README_COMPLETE.md  README_JTV.md  REVERSIBILITY.md  ROADMAP.adoc  SECURITY.md  SESSION-RESUME-2026-01-31.md  STATE.scm  (+14 more)
.clusterfuzzlite/: build.sh  project.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  codeql.yml  coverage.yml  ddraig-build.yml  deno.yml  dogfood-gate.yml  generator-generic-ossf-slsa3-publish.yml  guix-nix-policy.yml  hypatia-scan.yml  jekyll-gh-pages.yml  language-policy.yml  proof-regression.yml  quality.yml  rsr-antipattern.yml  rust-ci.yml  rust.yml  scorecard.yml  security-policy.yml  ts-blocker.yml  wellknown-enforcement.yml
.machine_readable/: ADJUST.contractile  AGENTIC.scm  COPROC-TRAJECTORIES.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/bot_directives/: README.adoc  git-private-farm.a2ml  gitbot-fleet.a2ml  hypatia.a2ml
.machine_readable/contractiles/: Adjustfile.a2ml  Bustfile.a2ml  Dustfile.a2ml  Intentfile.a2ml  Justfile  Mustfile.a2ml  Trustfile.a2ml
.machine_readable/self-validating/: README.adoc
.well-known/: security.txt
.well-known/groove/: manifest.json
academic/: BIBLIOGRAPHY.md  README.md  TODO_GAPS.md
academic/papers/: WHITE_PAPER.md
academic/proofs/: ALGEBRAIC_STRUCTURES.md  COMPUTATIONAL_THEORY.md  MATHEMATICAL_FOUNDATIONS.md  QUANTUM_REVERSIBILITY.md  SECURITY_PROOFS.md  STATISTICS_PROBABILITY.md  TYPE_THEORY.md
conformance/coproc/: dead_gate_dropped.jtv  insn_with_encoding.jtv  live_intrinsic.jtv  multi_block_selective.jtv  no_pata_all_live.jtv  riscv.pata  unknown_gate.jtv  unknown_gate.pata
conformance/invalid/: data_division.jtv  data_multiplication.jtv  data_subtraction.jtv  division_in_data.jtv  empty_function_name.jtv  incomplete_expression.jtv  invalid_number.jtv  keyword_as_identifier.jtv  loop_in_total.jtv  missing_brace.jtv  missing_equals.jtv  missing_open_brace.jtv  multiplication_in_data.jtv  print_in_pure.jtv  reverse_with_assignment.jtv  subtraction_in_data.jtv  unclosed_block_comment.jtv  unclosed_bracket.jtv  unterminated_string.jtv  unterminated_string_literal.jtv
conformance/valid/: comments.jtv  complex_numbers.jtv  data_expressions.jtv  empty_file.jtv  empty_function.jtv  for_loop.jtv  function.jtv  harvard_blocks.jtv  if_else.jtv  import_stmt.jtv  module.jtv  multiline_list.jtv  nested_data_expr.jtv  nested_functions.jtv  nested_if.jtv  number_systems.jtv  print_stmt.jtv  pure_function_with_loop.jtv  purity_markers.jtv  rational_arithmetic.jtv  return_stmt.jtv  return_value.jtv  reverse_block.jtv  reverse_block_addsub.jtv  symbolic_math.jtv  total_function.jtv  tuple_in_list.jtv  type_annotations.jtv  typed_params.jtv  while_loop.jtv  while_with_accumulator.jtv
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
crates/jtv-cli/: Cargo.toml
crates/jtv-cli/src/: main.rs  repl.rs  rsr_check.rs
crates/jtv-core/: Cargo.toml
crates/jtv-core/benches/: interpreter_bench.rs  parser_bench.rs
crates/jtv-core/src/: ast.rs  coproc.rs  coproc_lower.rs  dialect.rs  echo.rs  effect.rs  epistemic.rs  error.rs  formatter.rs  grammar.pest  interpreter.rs  lib.rs  number.rs  parser.rs  pretty.rs  purity.rs  recovery.rs  reversible.rs  typechecker.rs  wasm.rs
crates/jtv-core/stdlib/: collections.jtv  prelude.jtv  result.jtv  safe_math.jtv
crates/jtv-core/tests/: compatibility_tests.rs  conformance_tests.rs  contract_tests.rs  coproc_corpus_tests.rs  coproc_lower_tests.rs  coproc_tests.rs  harvard_boundary_tests.rs  mutation_killers.rs  parser_tests.rs  pest_rule_tests.rs  property_tests.proptest-regressions  property_tests.rs  reversibility_c2_tests.rs  reversibility_tests.rs
crates/jtv-debug/: Cargo.toml
crates/jtv-debug/src/: main.rs
crates/jtv-lsp/: Cargo.toml
crates/jtv-lsp/src/: main.rs
docs/: GRAMMAR_EVOLUTION.md  QUANTUM_VISION.md  QUICK_START.md  ROADMAP.md  TECHNICAL_ROADMAP.md  ecosystem-status.adoc  tech-debt-2026-05-26.md
docs/data/: portability.adoc
editors/: jtv.tmLanguage.json  julia-the-viper.tmLanguage.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_main.rs  fuzz_parser.rs
jtv_proofs/: JtvAxiomAudit.lean  JtvBool.lean  JtvCalls.lean  JtvControlSemantics.lean  JtvCore.lean  JtvEcho.lean  JtvExtended.lean  JtvOperational.lean  JtvPurity.lean  JtvReversibility.lean  JtvSecurity.lean  JtvTheorems.lean  JtvTotalSemantics.lean  JtvTypes.lean  PROOFS_STATUS.md  lake-manifest.json  lakefile.lean
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
playground/: 0-AI-MANIFEST.a2ml  ARCHITECTURE.adoc  CHANGELOG.adoc  CONTRIBUTING.md  Justfile  Mustfile  README.adoc  ROADMAP.adoc  config.ncl  mustfile.toml
site/: README.md  manifest.json
spec/: LANGUAGE_SPECIFICATION.md  README.adoc  grammar.ebnf  jtv_v2_type_system.adoc  jtv_v2_type_system_corrected.adoc  system-specs.md  type-system.md
tools/cli/: Cargo.toml
tools/cli/src/: main.rs  repl.rs
verification/: PROOF-CAPABILITY-MATRIX.adoc  README.adoc  proofs
viper-pkg/: Project.toml
vscode-extension/: README.md  package.json
web/: Main.res  MainTest.res  Server.res  deno.json  index.html  manifest.json  server.ts  sw.js
wiki/: Home.md
(+568 files in other folders)
