# SPDX-License-Identifier: MPL-2.0
# Julia the Viper - Workspace Root

[workspace]
resolver = "2"
members = [
    "crates/jtv-core",
    "crates/jtv-cli",
    "crates/jtv-lsp",
    "crates/jtv-debug",
]
exclude = [
    "fuzz",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/julia-the-viper"
keywords = ["security", "formal-verification", "parser", "interpreter", "wasm"]
categories = ["compilers", "parsing", "wasm"]

[workspace.dependencies]
# Parser
pest = "2.7"
pest_derive = "2.7"

# Number systems
num-rational = "0.4"
num-complex = "0.4"
num-traits = "0.2"

# Error handling
thiserror = "1.0"
miette = { version = "7", features = ["fancy"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# WASM
wasm-bindgen = "0.2"

# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
rustyline = "14.0"
dirs = "5.0"

# Testing
criterion = "0.5"
insta = "1"
proptest = "1.4"

# Async runtime
tokio = "1.0"

# LSP
tower-lsp = "0.20"

# Internal crates
jtv-core = { path = "crates/jtv-core" }

# PataCL — compile-time decision layer.
#
# NOTE: `patacl-core` lives in a SIBLING repository (`../patacl`) that is not
# present in fresh clones or CI. Declaring it here as a workspace dependency
# makes Cargo eagerly resolve `../patacl/crates/patacl-core/Cargo.toml` during
# lockfile resolution, which fails the ENTIRE build even when no crate enables
# the optional feature. Therefore it is NOT declared as a workspace dependency.
#
# To build WITH the coprocessor: re-add `patacl-core` and enable the `patacl`
# feature — see the instructions in `crates/jtv-core/Cargo.toml`.
