# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "jtv-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
jtv-core = { path = "../crates/jtv-core" }

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_main"
path = "fuzz_targets/fuzz_main.rs"
test = false
doc = false
