# SPDX-License-Identifier: MPL-2.0
# JtV - Command Line Interface

[package]
name = "jtv-cli"
description = "Command-line interface for JtV"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "jtv"
path = "src/main.rs"

[dependencies]
jtv-core.workspace = true
clap.workspace = true
colored.workspace = true
serde_json.workspace = true
rustyline.workspace = true
dirs.workspace = true
