# SPDX-License-Identifier: MPL-2.0
# Julia the Viper - Core Language Implementation

[package]
name = "jtv-core"
description = "Harvard Architecture language with provable termination guarantees"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pest.workspace = true
pest_derive.workspace = true
num-rational.workspace = true
num-complex.workspace = true
num-traits.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true

[features]
# PataCL compile-time decision layer (`extern coproc` gate evaluation).
#
# OFF by default because `patacl-core` lives in a SIBLING repo
# (`../patacl/crates/patacl-core`) that is absent from fresh clones / CI.
# A missing path/registry dependency — even an `optional` one — breaks
# Cargo's lockfile resolution for the WHOLE workspace before any code is
# compiled, so the `patacl-core` dependency line is intentionally NOT
# present in this manifest. The `patacl` feature here is a pure CODE gate
# (`#[cfg(feature = "patacl")]` in `src/coproc.rs`).
#
# To build WITH the coprocessor you must re-add the dependency yourself:
#   1. Make `patacl-core` resolvable by adding to the `[dependencies]`
#      section above (and back into the root `[workspace.dependencies]`),
#      pointing at the real crate, e.g.:
#          patacl-core = { path = "../patacl/crates/patacl-core" }
#      (a path/git source; do NOT use a non-existent crates.io version).
#   2. Build with the feature enabled:
#          cargo build -p jtv-core --features patacl
default = []
patacl = []

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "interpreter_bench"
harness = false
