# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "jtv-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jtv-core.workspace = true
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
