[package]
name = "jtv-cli"
version = "0.1.0"
edition = "2021"
authors = ["Julia the Viper Contributors"]
description = "Command-line interface for Julia the Viper"
license = "GPL-3.0"

[[bin]]
name = "jtv"
path = "src/main.rs"

[dependencies]
jtv-lang = { path = "../../packages/jtv-lang" }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde_json = "1.0"
rustyline = "14.0"
dirs = "5.0"
